更新同步官方e86e8b9 → ff1228f 同时修复了盔甲耐久不消耗的问题