@@ -1,4 +1,9 @@
 package slimeknights.tconstruct.library.recipe.melting;
+import it.unimi.dsi.fastutil.objects.Object2IntMap.Entry;
+import slimeknights.mantle.data.loadable.Loadables;
+import slimeknights.tconstruct.TConstruct;
+import slimeknights.tconstruct.library.tools.part.IMaterialItem;
+import java.util.Comparator;
 
 import slimeknights.tconstruct.library.recipe.TinkerIngredients;
 import slimeknights.tconstruct.library.recipe.MaterialTinkerIngredients;
@@ -30,7 +35,7 @@ import java.util.stream.Collectors;
 /**
  * Recipe to melt all castable tool parts of a given material
  */
-public class MaterialMeltingRecipe implements IMeltingRecipe, IMultiRecipe<MeltingRecipe> {
+public class MaterialMeltingRecipe implements IMeltingRecipe, IMultiRecipe<IDisplayableMeltingRecipe> {
   public static final RecordLoadable<MaterialMeltingRecipe> LOADER = RecordLoadable.create(
     ContextKey.ID.requiredField(),
     MaterialVariantId.LOADABLE.requiredField("input", r -> r.input.getVariant()),
@@ -106,34 +111,40 @@ public class MaterialMeltingRecipe implements IMeltingRecipe, IMultiRecipe<Melti
 
 
   /* JEI display */
-  private List<MeltingRecipe> multiRecipes = null;
+  private List<IDisplayableMeltingRecipe> multiRecipes = null;
 
   @Override
-  public List<MeltingRecipe> getRecipes(HolderLookup.Provider access) {
+  public List<IDisplayableMeltingRecipe> getRecipes(HolderLookup.Provider access) {
     if (multiRecipes == null) {
       if (input.get().isHidden()) {
-        multiRecipes = Collections.emptyList();
+        multiRecipes = List.of();
       } else {
-        // 1 recipe for each part
+        // grab and sort all parts that work
         MaterialVariantId inputId = input.getVariant();
-        multiRecipes = MaterialCastingLookup
+        List<Entry<IMaterialItem>> entries = MaterialCastingLookup
           .getAllItemCosts().stream()
           .filter(entry -> entry.getKey().canUseMaterial(inputId.getId()))
-          .map(entry -> {
-            FluidOutput output = this.result;
-            List<FluidOutput> byproducts = this.byproducts;
-            int cost = entry.getIntValue();
-            // if the part cost is 1, can skip messing with the output size
-            if (cost != 1) {
-              output = FluidOutput.fromStack(output.get().copyWithAmount(output.getAmount() * cost));
-              // skip streaming the byproducts if empty
-              if (!byproducts.isEmpty()) {
-                byproducts = byproducts.stream().map(fluid -> FluidOutput.fromStack(fluid.get().copyWithAmount(fluid.getAmount() * cost))).toList();
-              }
-            }
-            return new MeltingRecipe(id, "", MaterialTinkerIngredients.of(entry.getKey(), inputId), output, temperature,
-                                     IMeltingRecipe.calcTimeForAmount(temperature, output.getAmount()), byproducts, false);
-          }).collect(Collectors.toList());
+          .sorted(Comparator.<Entry<IMaterialItem>,Integer>comparing(Entry::getIntValue).thenComparing(entry -> Loadables.ITEM.getKey(entry.getKey().asItem())))
+          .toList();
+        // if we found nothing, do nothing. Should never happen so error
+        if (entries.isEmpty()) {
+          TConstruct.LOG.error("Failed to create display recipe for {}: found no tool parts that support {}", id, inputId);
+          multiRecipes = List.of();
+        } else {
+          // start building the recipe
+          DisplayMeltingRecipe.Builder recipe = DisplayMeltingRecipe.id(id).temperature(temperature).timeDynamic();
+          // input items just use the material
+          recipe.inputs(entries.stream().map(entry -> entry.getKey().withMaterialForDisplay(inputId)).toList());
+          // fluids
+          FluidStack output = this.result.get();
+          recipe.outputs(entries.stream().map(entry -> output.copyWithAmount(output.getAmount() * entry.getIntValue())).toList());
+          // if we have byproducts, scale those too
+          for (FluidOutput byproduct : this.byproducts) {
+            FluidStack fluid = byproduct.get();
+            recipe.byproduct(entries.stream().map(entry -> fluid.copyWithAmount(fluid.getAmount() * entry.getIntValue())).toList());
+          }
+          this.multiRecipes = List.of(recipe.build());
+        }
       }
     }
     return multiRecipes;
